Fix search jumping to top of page

--- a/wp-content/themes/chinapower/sass/layout/_header.scss
+++ b/wp-content/themes/chinapower/sass/layout/_header.scss
@@ -400,6 +400,10 @@ header.site-header {
 									vertical-align: text-top;
 									padding-top: 2px;
 									display: inline-block;
+
+									&:hover {
+										cursor: pointer;
+									}
 								}
 							}
 						}
